pkg/lang/testdata/ub/constraints/invalid/for-each-two-keys.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @a: var.rules, @b: var.rules }, ]
    when:    true
    require: true
  },
]
